# regexforge

./: .gitignore  README.md  SUBMISSION.md  app.json  manifest.json
.github/workflows/: build-executa-binary.yml
bundle/: app.js  index.html  samples.js  style.css
executas/regex-coach/: SKILL.md
executas/regex-forge/: executa.json  package_binary.sh  pyproject.toml  regex_forge_plugin.py
fixtures/: forge.jsonl
tests/plugin/: test_forge_contract.py
